pynotes/pynotes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pynotes
  labels:
    app: pynotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pynotes
  template:
    metadata:
      labels:
        app: pynotes
    spec:
      containers:
        - name: pynotes
          image: jleobernard/pynotes@sha256:3516e13f20a5becb009e614bbbf43c8677eb9cf6a6844e46a8f54522ca261ae9
#          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: pynotes-storage
              mountPath: /kosubs
            - name: pynotes-data
              mountPath: /data
            - name: pynotes-logs
              mountPath: /logs
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: pynotes-storage
          persistentVolumeClaim:
            claimName: pv-ko-store-claim
        - name: pynotes-data
          persistentVolumeClaim:
            claimName: pynotes-pv-claim-data
        - name: pynotes-logs
          persistentVolumeClaim:
            claimName: pynotes-pv-claim-logs
---
apiVersion: v1
kind: Service
metadata:
  name: pynotes-service
spec:
  selector:
    app: pynotes
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
